--- a/ms/tables.Rmd
+++ b/ms/tables.Rmd
@@ -56,6 +56,46 @@ Pa <- Pa.tidy %>%
          `95% CI`, `SD (Intercept)`, N)
 write_csv(Pa, here('ms', 'tables', 'Pa-modelsummary.csv'))
 message("Overdispersion parameter ", round(summary(Pamod)$sigma, 2))
+
+Lmod <- results$models$Larix
+Nre <- Lmod$modelInfo$reStruc$condReStruc$`1 | locality`$blockReps
+L.tidy <- broom.mixed::tidy(Lmod)
+L <- L.tidy %>% 
+  arrange(component) %>% 
+  mutate(component = if_else(component == 'cond', 
+                             'Conditional Model', 
+                             'Zero-inflation model')) %>% 
+  mutate(ci.l = estimate - 1.96*std.error, ci.u = estimate + 1.96*std.error) %>% 
+  mutate_if(is.double, ~ round(., digits = 2)) %>% 
+  mutate(`95% CI` = if_else(is.na(std.error), NA_character_, paste0(ci.l, ', ', ci.u)),
+         term = if_else(term == 'seeds.WALD:age', 'seeds.WALD * age', term)) %>% 
+  mutate(`SD (Intercept)` = if_else(effect == 'fixed', NA_real_, estimate),
+         estimate = if_else(effect == 'fixed', estimate, NA_real_),
+         N = if_else(effect == 'fixed', NA_real_, Nre),
+         term = if_else(effect == 'fixed', term, 'locality')) %>% 
+  select(`Mixture component` = component, Term = term, Estimate = estimate, 
+         `95% CI`, `SD (Intercept)`, N)
+write_csv(L, here('ms', 'tables', 'L-modelsummary.csv'))
+
+Pcmod <- results$models$P.contorta
+Nre <- Pcmod$modelInfo$reStruc$condReStruc$`1 | locality`$blockReps
+Pc.tidy <- broom.mixed::tidy(Pcmod)
+Pc <- Pc.tidy %>% 
+  arrange(component) %>% 
+  mutate(component = if_else(component == 'cond', 
+                             'Conditional Model', 
+                             'Zero-inflation model')) %>% 
+  mutate(ci.l = estimate - 1.96*std.error, ci.u = estimate + 1.96*std.error) %>% 
+  mutate_if(is.double, ~ round(., digits = 2)) %>% 
+  mutate(`95% CI` = if_else(is.na(std.error), NA_character_, paste0(ci.l, ', ', ci.u)),
+         term = if_else(term == 'seeds.WALD:age', 'seeds.WALD * age', term)) %>% 
+  mutate(`SD (Intercept)` = if_else(effect == 'fixed', NA_real_, estimate),
+         estimate = if_else(effect == 'fixed', estimate, NA_real_),
+         N = if_else(effect == 'fixed', NA_real_, Nre),
+         term = if_else(effect == 'fixed', term, 'locality')) %>% 
+  select(`Mixture component` = component, Term = term, Estimate = estimate, 
+         `95% CI`, `SD (Intercept)`, N)
+write_csv(Pc, here('ms', 'tables', 'Pc-modelsummary.csv'))
 ```
 
 # sessionInfo 
