--- a/ms/invasibility-ms.bib
+++ b/ms/invasibility-ms.bib
@@ -12,8 +12,8 @@
 }
 
 @techreport{appelgrenKartleggingAvKortdistansespredning2017,
-  title = {Kartlegging Av Kortdistansespredning Av Fremmede Bartr{\ae}r i {{Rogaland}} Og {{Hordaland}}},
-  author = {Appelgren, Leif and Torvik, Solbj{\o}rg Engen},
+  title = {Kartlegging Av Kortdistansespredning Av Fremmede Bartr\ae r i {{Rogaland}} Og {{Hordaland}}},
+  author = {Appelgren, Leif and Torvik, Solbj\o rg Engen},
   year = {2017},
   institution = {{Ecofact}},
   file = {C\:\\Users\\julienv\\Google Drive\\ZoteroLibrary\\Appelgren and Torvik - 2017 - Kartlegging av kortdistansespredning av fremmede b.pdf},
@@ -21,7 +21,7 @@
 }
 
 @techreport{appelgrenKartleggingAvKortdistansespredning2018,
-  title = {Kartlegging Av Kortdistansespredning Av Fremmede Bartr{\ae}r i {{Rogaland}} 2018},
+  title = {Kartlegging Av Kortdistansespredning Av Fremmede Bartr\ae r i {{Rogaland}} 2018},
   author = {Appelgren, Leif},
   year = {2018},
   institution = {{Ecofact}},
@@ -100,12 +100,28 @@
 }
 
 @phdthesis{berstadEndringarEitVestnorsk2014,
-  title = {Endringar i Eit Vestnorsk Kystlandskap Som F{\o}lgje Av Planting Og Naturleg Forynging Av Sitkagran ({{Picea}} Sitchensis): {{Ein}} Landskaps{\o}kologisk Og Metodisk Studie},
-  author = {Berstad, {\AA}se-Birgitte and Auestad, Inger and Rydgren, Knut},
+  title = {Endringar i Eit Vestnorsk Kystlandskap Som F\o lgje Av Planting Og Naturleg Forynging Av Sitkagran ({{Picea}} Sitchensis): {{Ein}} Landskaps\o kologisk Og Metodisk Studie},
+  author = {Berstad, \AA se-Birgitte and Auestad, Inger and Rydgren, Knut},
   year = {2014},
+  volume = {Master in},
   file = {C\:\\Users\\julienv\\Google Drive\\ZoteroLibrary\\Berstad et al_2014_Endringar i eit vestnorsk kystlandskap som følgje av planting og naturleg.pdf},
   keywords = {management,remote sensing,sitka spruce},
-  school = {H{\o}gskulen i Sogn og Fjordane}
+  school = {H\o gskulen i Sogn og Fjordane}
+}
+
+@article{blackburnProposedUnifiedFramework2011,
+  title = {A Proposed Unified Framework for Biological Invasions},
+  author = {Blackburn, T M and Pysek, P and Bacher, S and Carlton, J T and Duncan, R P and Jarosik, V and Wilson, J R and Richardson, D M},
+  year = {2011},
+  volume = {26},
+  pages = {333--339},
+  doi = {10.1016/j.tree.2011.03.023},
+  file = {C\:\\Users\\julienv\\Google Drive\\ZoteroLibrary\\Blackburn et al_2011_A proposed unified framework for biological invasions.pdf},
+  isbn = {1872-8383 (Electronic) 0169-5347 (Linking)},
+  journal = {Trends in Ecology and Evolution},
+  keywords = {invasion},
+  number = {7},
+  pmid = {21601306}
 }
 
 @article{bohrerEffectsCanopyHeterogeneity2008,
@@ -265,6 +281,20 @@
   number = {8}
 }
 
+@article{catfordQuantifyingLevelsBiological2012,
+  title = {Quantifying Levels of Biological Invasion: Towards the Objective Classification of Invaded and Invasible Ecosystems},
+  author = {Catford, Jane A and Vesk, Peter A and Richardson, David M and Py{\v s}ek, Petr},
+  year = {2012},
+  volume = {18},
+  pages = {44--62},
+  doi = {10.1111/j.1365-2486.2011.02549.x},
+  file = {C\:\\Users\\julienv\\Google Drive\\ZoteroLibrary\\Catford et al_2012_Quantifying levels of biological invasion.pdf},
+  isbn = {13541013},
+  journal = {Global Change Biology},
+  keywords = {invasion},
+  number = {1}
+}
+
 @article{charlesRainforestSeedRain2017,
   title = {Rainforest Seed Rain into Abandoned Tropical {{Australian}} Pasture Is Dependent on Adjacent Rainforest Structure and Extent},
   author = {Charles, Lachlan S. and Dwyer, John M. and Mayfield, Margaret M.},
@@ -328,7 +358,7 @@
 @article{engelmarkEcologicalEffectsManagement2001,
   title = {Ecological Effects and Management Aspects of an Exotic Tree Species: The Case of Lodgepole Pine in {{Sweden}}},
   shorttitle = {Ecological Effects and Management Aspects of an Exotic Tree Species},
-  author = {Engelmark, Ola and Sj{\"o}berg, Kjell and Andersson, Bengt and Rosvall, Ola and {\AA}gren, G{\"o}ran I. and Baker, William L. and Barklund, Pia and Bj{\"o}rkman, Christer and Despain, Don G. and Elfving, Bj{\"o}rn and Ennos, Richard A. and Karlman, Margareta and Knecht, Magnus F. and Knight, Dennis H. and Ledgard, Nick J. and Lindel{\"o}w, {\AA}ke and Nilsson, Christer and Peterken, George F. and S{\"o}rlin, Sverker and Sykes, Martin T.},
+  author = {Engelmark, Ola and Sj{\"o}berg, Kjell and Andersson, Bengt and Rosvall, Ola and \AA gren, G{\"o}ran I. and Baker, William L. and Barklund, Pia and Bj{\"o}rkman, Christer and Despain, Don G. and Elfving, Bj{\"o}rn and Ennos, Richard A. and Karlman, Margareta and Knecht, Magnus F. and Knight, Dennis H. and Ledgard, Nick J. and Lindel{\"o}w, \AA ke and Nilsson, Christer and Peterken, George F. and S{\"o}rlin, Sverker and Sykes, Martin T.},
   year = {2001},
   month = feb,
   volume = {141},
@@ -373,7 +403,7 @@
 }
 
 @techreport{FremmedeTreslagNorske2018,
-  title = {Fremmede Treslag i {{Norske}} Verneomr{\aa}der -- En Kort Kunnskapsoversikt},
+  title = {Fremmede Treslag i {{Norske}} Verneomr\aa der -- En Kort Kunnskapsoversikt},
   year = {2018},
   institution = {{Sabima Botanisk forening Naturvernforbundet WWF Verdens naturfond}},
   file = {C\:\\Users\\julienv\\Google Drive\\ZoteroLibrary\\2018_Fremmede treslag i Norske verneområder -- en kort kunnskapsoversikt.pdf},
@@ -381,12 +411,13 @@
 }
 
 @phdthesis{gjengedalLandskapsendringerSomFolge2012,
-  title = {Landskapsendringer Som F{\o}lge Av Planting Og Spredning Av Sitkagran: {{En}} Landskaps{\o}kologisk Studie Av Tre Omr{\aa}der i {{Ausrheim}} Og {{Rad{\o}y}} Kommuner 2012},
+  title = {Landskapsendringer Som F\o lge Av Planting Og Spredning Av Sitkagran: {{En}} Landskaps\o kologisk Studie Av Tre Omr\aa der i {{Ausrheim}} Og {{Rad\o y}} Kommuner 2012},
   author = {Gjengedal, Magnhild and Robertsen, Henriette and Rydgren, Knut and Auestad, Inger},
   year = {2012},
+  volume = {Bachelor i},
   file = {C\:\\Users\\julienv\\Google Drive\\ZoteroLibrary\\Gjengedal et al_2012_Landskapsendringer som følge av planting og spredning av sitkagran.pdf},
   keywords = {management,remote sensing},
-  school = {H{\o}gskulen i Sogn og Fjordane}
+  school = {H\o gskulen i Sogn og Fjordane}
 }
 
 @article{gomezMaintainingCloseCanopy2019,
@@ -434,14 +465,13 @@
 @article{haakenstadNORA10EIRevisedRegional,
   title = {{{NORA10EI}}: {{A}} Revised Regional Atmosphere-Wave Hindcast for the {{North Sea}}, the {{Norwegian Sea}} and the {{Barents Sea}}},
   shorttitle = {{{NORA10EI}}},
-  author = {Haakenstad, Hilde and Breivik, {\O}yvind and Reistad, Magnar and Aarnes, Ole J.},
+  author = {Haakenstad, Hilde and Breivik, \O yvind and Reistad, Magnar and Aarnes, Ole J.},
   volume = {n/a},
   issn = {1097-0088},
   doi = {10.1002/joc.6458},
   copyright = {\textcopyright{} 2019 The Authors. International Journal of Climatology published by John Wiley \& Sons Ltd on behalf of the Royal Meteorological Society.},
   journal = {International Journal of Climatology},
   language = {en},
-  note = {\_eprint: https://rmets.onlinelibrary.wiley.com/doi/pdf/10.1002/joc.6458},
   number = {n/a}
 }
 
@@ -544,7 +574,7 @@
 @article{kaliniewiczPhysicalPropertiesSeeds2018,
   ids = {kaliniewiczPhysicalPropertiesSeeds2018},
   title = {Physical {{Properties}} of {{Seeds}} of {{Eleven Spruce Species}}},
-  author = {Kaliniewicz, Zdzis{\l}aw and {\.Z}uk, Zbigniew and Kusi{\'n}ska, El{\.z}bieta},
+  author = {Kaliniewicz, Zdzis\l aw and {\.Z}uk, Zbigniew and Kusi{\'n}ska, El{\.z}bieta},
   year = {2018},
   month = oct,
   volume = {9},
@@ -602,7 +632,7 @@
 }
 
 @techreport{kyrkjeeideKartleggingAvKortdistansespredning2017,
-  title = {Kartlegging Av Kortdistansespredning Av Fremmede Bartr{\ae}r {{Nord Norge}}},
+  title = {Kartlegging Av Kortdistansespredning Av Fremmede Bartr\ae r {{Nord Norge}}},
   author = {Kyrkjeeide, Magni Olsen and Often, Anders and Myklebost, Heidi Elin and Olsen, Siri Lie and Hagelin, Jon and Ruano, Monica and Frivoll, Vigdis and De Stefano, Matteo},
   year = {2017},
   address = {{Trondheim, Norway}},
@@ -627,6 +657,22 @@
   number = {1}
 }
 
+@article{lonsdaleGlobalPatternsPlant1999,
+  title = {Global {{Patterns}} of {{Plant Invasions}} and the {{Concept}} of {{Invasibility}}},
+  author = {Lonsdale, W. M.},
+  year = {1999},
+  volume = {80},
+  pages = {1522--1536},
+  issn = {1939-9170},
+  doi = {10.1890/0012-9658(1999)080[1522:GPOPIA]2.0.CO;2},
+  copyright = {\textcopyright{} 1999 by the Ecological Society of America},
+  file = {C\:\\Users\\julienv\\Google Drive\\ZoteroLibrary\\Lonsdale_1999_Global Patterns of Plant Invasions and the Concept of Invasibility.pdf},
+  journal = {Ecology},
+  keywords = {dispersal,disturbance,invasibility,invasion},
+  language = {en},
+  number = {5}
+}
+
 @article{mcconnachieEstimatingEffectPlantations2015,
   title = {Estimating the Effect of Plantations on Pine Invasions in Protected Areas: A Case Study from {{South Africa}}},
   shorttitle = {Estimating the Effect of Plantations on Pine Invasions in Protected Areas},
@@ -642,6 +688,14 @@
   keywords = {forest,invasion},
   language = {en},
   number = {1}
+}
+
+@incollection{mcelreathHauntedDAGCausal2020,
+  title = {The {{Haunted DAG}} \& {{The Causal Terror}}},
+  booktitle = {Statisitical {{Rethinking}}: {{A Bayesian Course}} with {{Examples}} in {{R}} and {{Stan}}},
+  author = {McElreath, Richard},
+  year = {2020},
+  edition = {Second}
 }
 
 @incollection{nathanDispersalKernels2012,
@@ -666,7 +720,7 @@
 
 @techreport{nordbakkenVrifuruPinusContorta2012,
   title = {{Vrifuru Pinus contorta}},
-  author = {Nordbakken, J{\o}rn-Frode},
+  author = {Nordbakken, J\o rn-Frode},
   year = {2012},
   institution = {{Artsdatabanken}},
   file = {C\:\\Users\\julienv\\Google Drive\\ZoteroLibrary\\FaktaArk_nr_226_Vrifuru__p_Pinuscontorta__p_.pdf},
@@ -685,7 +739,7 @@
 }
 
 @techreport{olsenKartleggingAvKortdistansespredning2016,
-  title = {Kartlegging Av Kortdistansespredning Av Fremmede Bartr{\ae}r {{Vrifuru}} ({{Pinus}} Contorta) Og Lutzgran ({{Picea}} \texttimes{} Lutzii)},
+  title = {Kartlegging Av Kortdistansespredning Av Fremmede Bartr\ae r {{Vrifuru}} ({{Pinus}} Contorta) Og Lutzgran ({{Picea}} \texttimes{} Lutzii)},
   author = {Olsen, Siri Lie and Stabbetorp, Odd and Skarpaas, Olav and Often, Anders and Gajda, Honorata},
   year = {2016},
   address = {{Oslo, Norway}},
@@ -696,7 +750,7 @@
 }
 
 @techreport{olsenKartleggingAvKortdistansespredning2019,
-  title = {Kartlegging Av Kortdistansespredning Av Fremmede Bartr{\ae}r},
+  title = {Kartlegging Av Kortdistansespredning Av Fremmede Bartr\ae r},
   author = {Olsen, Siri Lie and Kyrkjeeide, Magni Olsen and Myklebost, Heidi Elin and Jackson, Craig and Gastinger, Miene-Marie},
   year = {2019},
   address = {{Oslo, Norway}},
@@ -707,10 +761,10 @@
 
 @techreport{orkaUseRemoteSensing2016,
   title = {Use of Remote Sensing for Mapping of Non-Native Conifer Species},
-  author = {{\O}rka, Hans Ole and Hauglin, Marius},
+  author = {\O rka, Hans Ole and Hauglin, Marius},
   year = {2016},
   pages = {1--76},
-  address = {{{\AA}s, Norway}},
+  address = {{\AA s, Norway}},
   institution = {{Norwegian University of Life Sciences (NMBU)}},
   file = {C\:\\Users\\julienv\\Google Drive\\ZoteroLibrary\\Ørka_Hauglin_2016_Use of remote sensing for mapping of non-native conifer species.pdf},
   keywords = {invasion,remote sensing,sitka spruce},
@@ -719,7 +773,7 @@
 
 @article{oyenBiomassPotentialSelected2017,
   title = {The {{Biomass Potential}} of {{Some Selected Native}} and {{Non}}-{{Native Species}} for {{Afforestation}} - {{A Case Study}} from {{Western Norway}}},
-  author = {{\O}yen, Bernt-H{\aa}vard and Nygaard, Per},
+  author = {\O yen, Bernt-H\aa vard and Nygaard, Per},
   year = {2017},
   volume = {1},
   doi = {10.15406/freij.2017.01.00015},
@@ -730,8 +784,8 @@
 }
 
 @article{prestoSembrafuruPinusCembra2013,
-  title = {Sembrafuru {{Pinus}} Cembra Invaderer Byn{\ae}rt Kulturlandskap. {{Eksempel}} Fra {{Ladehalv{\o}ya}}, {{Trondheim}}},
-  author = {Prest{\o}, Tommy and Hagen, Dagmar and Vange, Vibekke},
+  title = {Sembrafuru {{Pinus}} Cembra Invaderer Byn\ae rt Kulturlandskap. {{Eksempel}} Fra {{Ladehalv\o ya}}, {{Trondheim}}},
+  author = {Prest\o, Tommy and Hagen, Dagmar and Vange, Vibekke},
   year = {2013},
   volume = {71},
   pages = {16--26},
@@ -742,7 +796,7 @@
 
 @article{reistadHighresolutionHindcastWind2011,
   title = {A High-Resolution Hindcast of Wind and Waves for the {{North Sea}}, the {{Norwegian Sea}}, and the {{Barents Sea}}},
-  author = {Reistad, Magnar and Breivik, {\O}yvind and Haakenstad, Hilde and Aarnes, Ole Johan and Furevik, Birgitte R. and Bidlot, Jean-Raymond},
+  author = {Reistad, Magnar and Breivik, \O yvind and Haakenstad, Hilde and Aarnes, Ole Johan and Furevik, Birgitte R. and Bidlot, Jean-Raymond},
   year = {2011},
   volume = {116},
   pages = {C05019},
@@ -765,13 +819,45 @@
   keywords = {invasion}
 }
 
+@article{richardsonNaturalizationIntroducedPlants2012,
+  title = {Naturalization of Introduced Plants: Ecological Drivers of Biogeographical Patterns},
+  shorttitle = {Naturalization of Introduced Plants},
+  author = {Richardson, David M. and Py{\v s}ek, Petr},
+  year = {2012},
+  volume = {196},
+  pages = {383--396},
+  issn = {1469-8137},
+  doi = {10.1111/j.1469-8137.2012.04292.x},
+  copyright = {\textcopyright{} 2012 The Authors. New Phytologist \textcopyright{} 2012 New Phytologist Trust},
+  file = {C\:\\Users\\julienv\\Google Drive\\ZoteroLibrary\\Richardson_Pyšek_2012_Naturalization of introduced plants.pdf},
+  journal = {New Phytologist},
+  keywords = {disturbance,invasion,trait},
+  language = {en},
+  number = {2}
+}
+
 @phdthesis{richterSpredningAvSitkagran2015,
-  title = {Spredning Av Sitkagran {{Picea}} Sitchensis P{\aa} {{Stadlandet}}, {{Selje}} Kommune},
+  title = {Spredning Av Sitkagran {{Picea}} Sitchensis P\aa{} {{Stadlandet}}, {{Selje}} Kommune},
   author = {Richter, L M},
   year = {2015},
+  volume = {Bachelor},
   file = {C\:\\Users\\julienv\\Google Drive\\ZoteroLibrary\\Richter_2015_Spredning av sitkagran Picea sitchensis på Stadlandet, Selje kommune.pdf},
   keywords = {management,sitka spruce},
-  school = {H{\o}gskolen i Nord- Tr{\o}ndelag}
+  school = {H\o gskolen i Nord- Tr\o ndelag}
+}
+
+@article{rundelTreeInvasionsTreeless2014,
+  title = {Tree Invasions into Treeless Areas: Mechanisms and Ecosystem Processes},
+  author = {Rundel, Philip W and Dickie, Ian A and Richardson, David M},
+  year = {2014},
+  volume = {16},
+  pages = {663--675},
+  doi = {10.1007/s10530-013-0614-9},
+  file = {C\:\\Users\\julienv\\Google Drive\\ZoteroLibrary\\Rundel et al_2014_Tree invasions into treeless areas.pdf},
+  isbn = {1387-3547 1573-1464},
+  journal = {Biological Invasions},
+  keywords = {invasion},
+  number = {3}
 }
 
 @article{sanchezFieldTestInverse2011,
@@ -787,6 +873,22 @@
   keywords = {dispersal},
   number = {4},
   pmid = {21613168}
+}
+
+@article{sandeSimilarFactorsUnderlie2020,
+  title = {Similar Factors Underlie Tree Abundance in Forests in Native and Alien Ranges},
+  author = {van der Sande, Masha T. and Bruelheide, Helge and Dawson, Wayne and Dengler, J{\"u}rgen and Essl, Franz and Field, Richard and Haider, Sylvia and van Kleunen, Mark and Kreft, Holger and Pagel, Joern and Pergl, Jan and Purschke, Oliver and Py{\v s}ek, Petr and Weigelt, Patrick and Winter, Marten and Attorre, Fabio and Aubin, Isabelle and Bergmeier, Erwin and Chytr{\'y}, Milan and Dainese, Matteo and Sanctis, Michele De and Fagundez, Jaime and Golub, Valentin and Guerin, Greg R. and Guti{\'e}rrez, Alvaro G. and Jandt, Ute and Jansen, Florian and Jim{\'e}nez-Alfaro, Borja and Kattge, Jens and Kearsley, Elizabeth and Klotz, Stefan and Kramer, Koen and Moretti, Marco and Niinemets, {\"U}lo and Peet, Robert K. and Penuelas, Josep and Pet{\v r}{\'i}k, Petr and Reich, Peter B. and Sandel, Brody and Schmidt, Marco and Sibikova, Maria and Violle, Cyrille and Whitfeld, Timothy J. S. and Wohlgemuth, Thomas and Knight, Tiffany M.},
+  year = {2020},
+  volume = {29},
+  pages = {281--294},
+  issn = {1466-8238},
+  doi = {10.1111/geb.13027},
+  copyright = {\textcopyright{} 2019 The Authors. Global Ecology and Biogeography published by John Wiley \& Sons Ltd},
+  file = {C\:\\Users\\julienv\\Google Drive\\ZoteroLibrary\\Sande et al_2020_Similar factors underlie tree abundance in forests in native and alien ranges.pdf},
+  journal = {Global Ecology and Biogeography},
+  keywords = {abundance,competition,forest,invasion,trait},
+  language = {en},
+  number = {2}
 }
 
 @article{sandstromImpactsDeadWood2019,
@@ -807,8 +909,8 @@
 }
 
 @techreport{sandvenKartleggingAvKortdistansespredning2019,
-  title = {Kartlegging Av Kortdistansespredning Av Fremmede Bartr{\ae}r i {{Hordaland}}},
-  author = {Sandven, J and Aamodt, O W and S{\o}rhuus, {\O}},
+  title = {Kartlegging Av Kortdistansespredning Av Fremmede Bartr\ae r i {{Hordaland}}},
+  author = {Sandven, J and Aamodt, O W and S\o rhuus, \O},
   year = {2019},
   institution = {{NORSKOG}},
   file = {C\:\\Users\\julienv\\Google Drive\\ZoteroLibrary\\Sandven et al. - 2019 - Kartlegging av kortdistansespredning av fremmede b.pdf},
@@ -816,7 +918,7 @@
 }
 
 @techreport{sandvikKunnskapsstatusSpredningOg2012,
-  title = {Kunnskapsstatus for Spredning Og Effekter Av Fremmede Bartr{\ae}r P{\aa} Biologisk Mangfold},
+  title = {Kunnskapsstatus for Spredning Og Effekter Av Fremmede Bartr\ae r P\aa{} Biologisk Mangfold},
   author = {Sandvik, H},
   year = {2012},
   institution = {{Direktoratet for naturforvaltning}},
@@ -875,6 +977,23 @@
   keywords = {dispersal}
 }
 
+@article{textorRobustCausalInference2016,
+  title = {Robust Causal Inference Using Directed Acyclic Graphs: The {{R}} Package `Dagitty'},
+  shorttitle = {Robust Causal Inference Using Directed Acyclic Graphs},
+  author = {Textor, Johannes and {van der Zander}, Benito and Gilthorpe, Mark S. and Li{\'s}kiewicz, Maciej and Ellison, George TH},
+  year = {2016},
+  month = dec,
+  volume = {45},
+  pages = {1887--1894},
+  issn = {0300-5771},
+  doi = {10.1093/ije/dyw341},
+  file = {C\:\\Users\\julienv\\Google Drive\\ZoteroLibrary\\Textor et al_2016_Robust causal inference using directed acyclic graphs.pdf},
+  journal = {International Journal of Epidemiology},
+  keywords = {causal inference,R package,software,statistics},
+  language = {en},
+  number = {6}
+}
+
 @article{trakhtenbrotMechanisticModelingSeed2014,
   title = {Mechanistic Modeling of Seed Dispersal by Wind over Hilly Terrain},
   author = {Trakhtenbrot, A. and Katul, G. G. and Nathan, R.},
@@ -887,6 +1006,21 @@
   file = {C\:\\Users\\julienv\\Google Drive\\ZoteroLibrary\\Trakhtenbrot et al_2014_Mechanistic modeling of seed dispersal by wind over hilly terrain.pdf},
   journal = {Ecological Modelling},
   keywords = {dispersal,fragmentation,landscape,seeds}
+}
+
+@article{vanettenInvasionPatternsPinus2020,
+  title = {Invasion Patterns of {{Pinus}} Pinaster in South-West {{Australia}} in Relation to Fire, Vegetation Type and Plantation Management},
+  author = {{van Etten}, Eddie J. B. and Belen, C. Anne and {Calvi{\~n}o-Cancela}, Mar{\'i}a},
+  year = {2020},
+  month = may,
+  volume = {463},
+  pages = {118042},
+  issn = {0378-1127},
+  doi = {10.1016/j.foreco.2020.118042},
+  file = {C\:\\Users\\julienv\\Google Drive\\ZoteroLibrary\\van Etten et al_2020_Invasion patterns of Pinus pinaster in south-west Australia in relation to.pdf},
+  journal = {Forest Ecology and Management},
+  keywords = {conifer,dispersal,disturbance,fire,invasion,recruitment,vegetation},
+  language = {en}
 }
 
 @article{vanputtenDistorteddistanceModelsDirectional2012,
